fix blog menu footer overlap

--- a/source/style/pages/blog.scss
+++ b/source/style/pages/blog.scss
@@ -48,6 +48,7 @@ html.html--blog-opened .top-nav {
 
 .blog__articles {
   margin-left: 28%;
+  @include clearfix;
 
   @include desktop {
     margin-left: 33.5%;
@@ -105,6 +106,8 @@ html.html--blog-opened .top-nav {
   height: auto;
   padding-top: 68px;
   max-width: 24.5rem;
+  overflow-y: auto;
+  max-height: 100%;
   @include wide {
     padding-left: 6rem;
   }
